# rosm_pbf_reader

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: count_wikidata.rs  print_header.rs  wikidata.rs
proto/: README.md
src/: dense.rs  lib.rs  pbf.rs  proto.rs  util.rs
