[package]
name = "rosm_pbf_reader"
version = "1.0.0"
authors = ["Zsolt Bölöny <bolony.zsolt@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A low-level Rust library for parsing OpenStreetMap data in PBF format"
repository = "https://github.com/rosm-project/rosm_pbf_reader"
keywords = ["osm", "openstreetmap", "osmpbf"]
categories = ["parser-implementations", "encoding"]

[dependencies]
flate2 = { version = "1.0.28", optional = true }
prost = "0.12.1"

[features]
default = ["flate2"]

[build-dependencies]
prost-build = "0.12.1"

[dev-dependencies]
env_logger = "0.10.1"
log = "0.4.20"
threadpool = "1.8.1"
