[package]
name = "rosm_pbf_reader"
version = "1.0.3"
authors = ["Zsolt Bölöny <bolony.zsolt@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A low-level Rust library for parsing OpenStreetMap data in PBF format"
repository = "https://github.com/rosm-project/rosm_pbf_reader"
keywords = ["osm", "openstreetmap", "osmpbf"]
categories = ["parser-implementations", "encoding"]

[dependencies]
flate2 = { version = "1.1.0", optional = true }
prost = "0.13.5"

[features]
default = ["flate2"]

[build-dependencies]
prost-build = "0.13.5"

[dev-dependencies]
env_logger = "0.11.6"
log = "0.4.26"
threadpool = "1.8.1"
